add header top nav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+/* Import global scss. */
+@import "./theme/base.scss";
