--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,25 +36,127 @@
                 <p>
                   {{ "USD" | uppercase }}
                 </p>
-                <span>
+                <!-- <span>
                   <i class="fas fa-chevron-down"></i>
-                </span>
+                </span> -->
               </div>
             </a>
           </div>
 
-          <div class="country-dropdown-menu"></div>
+          <!-- <div class="country-dropdown-menu"></div> -->
         </div>
       </div>
     </div>
   </div>
   <!-- middle nav -->
   <div class="middle-nav">
-    <div class="container"></div>
+    <div class="container middle-nav-child">
+      <!-- logo -->
+      <div class="mid-logo">
+        <img
+          src="https://cdn.shopify.com/s/files/1/0531/1604/3454/t/2/assets/logo.png?v=179511512449217020951611638469"
+          alt="renoxa"
+        />
+      </div>
+
+      <!-- search -->
+      <div class="mid-search">
+        <form>
+          <input type="text" placeholder="Search..." />
+          <button type="submit" class="search-btn">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+      </div>
+
+      <!-- cart -->
+      <div class="mid-cart">
+        <div class="cart-wishlist">
+          <button type="button" class="">
+            <span>
+              <svg
+                aria-hidden="true"
+                focusable="false"
+                role="presentation"
+                class="icon iconwish"
+                viewBox="0 0 49.94 49.94"
+                width="22px"
+                height="22px"
+              >
+                <path
+                  d="M48.856,22.731c0.983-0.958,1.33-2.364,0.906-3.671c-0.425-1.307-1.532-2.24-2.892-2.438l-12.092-1.757
+                c-0.515-0.075-0.96-0.398-1.19-0.865L28.182,3.043c-0.607-1.231-1.839-1.996-3.212-1.996c-1.372,0-2.604,0.765-3.211,1.996
+                L16.352,14c-0.23,0.467-0.676,0.79-1.191,0.865L3.069,16.623C1.71,16.82,0.603,17.753,0.178,19.06
+                c-0.424,1.307-0.077,2.713,0.906,3.671l8.749,8.528c0.373,0.364,0.544,0.888,0.456,1.4L8.224,44.702
+                c-0.232,1.353,0.313,2.694,1.424,3.502c1.11,0.809,2.555,0.914,3.772,0.273l10.814-5.686c0.461-0.242,1.011-0.242,1.472,0
+                l10.815,5.686c0.528,0.278,1.1,0.415,1.669,0.415c0.739,0,1.475-0.231,2.103-0.688c1.111-0.808,1.656-2.149,1.424-3.502
+                L39.651,32.66c-0.088-0.513,0.083-1.036,0.456-1.4L48.856,22.731z M37.681,32.998l2.065,12.042c0.104,0.606-0.131,1.185-0.629,1.547
+                c-0.499,0.361-1.12,0.405-1.665,0.121l-10.815-5.687c-0.521-0.273-1.095-0.411-1.667-0.411s-1.145,0.138-1.667,0.412l-10.813,5.686
+                c-0.547,0.284-1.168,0.24-1.666-0.121c-0.498-0.362-0.732-0.94-0.629-1.547l2.065-12.042c0.199-1.162-0.186-2.348-1.03-3.17
+                L2.48,21.299c-0.441-0.43-0.591-1.036-0.4-1.621c0.19-0.586,0.667-0.988,1.276-1.077l12.091-1.757
+                c1.167-0.169,2.176-0.901,2.697-1.959l5.407-10.957c0.272-0.552,0.803-0.881,1.418-0.881c0.616,0,1.146,0.329,1.419,0.881
+                l5.407,10.957c0.521,1.058,1.529,1.79,2.696,1.959l12.092,1.757c0.609,0.089,1.086,0.491,1.276,1.077
+                c0.19,0.585,0.041,1.191-0.4,1.621l-8.749,8.528C37.866,30.65,37.481,31.835,37.681,32.998z"
+                ></path>
+              </svg>
+            </span>
+            <span>{{ "wishlist" | titlecase }}</span>
+          </button>
+        </div>
+        <div class="cart-cart">
+          <button type="button" class="">
+            <span>
+              <svg id="hcart" height="22px" width="22px" viewBox="0 0 512 512">
+                <path
+                  d="M488.542,174.916H293.737V27.028c0-10.686-8.693-19.378-19.378-19.378h-36.717c-10.686,0-19.378,8.693-19.378,19.378
+                v147.888H23.458C10.524,174.916,0,185.439,0,198.375v50.57c0,12.936,10.524,23.458,23.458,23.458h3.375L53.27,460.293
+                c3.534,25.117,25.327,44.057,50.691,44.057h304.076c25.365,0,47.157-18.941,50.691-44.057l26.438-187.891h3.375
+                c12.936,0,23.458-10.523,23.458-23.458v-50.57C512,185.439,501.478,174.916,488.542,174.916z M238.661,28.048h34.677v194.805
+                h-34.677V28.048z M438.53,457.451c-2.125,15.108-15.235,26.502-30.492,26.502H103.961c-15.257,0-28.366-11.393-30.492-26.502
+                L47.432,272.402h417.135L438.53,457.451z M491.602,248.944c0,1.687-1.373,3.06-3.06,3.06H23.458c-1.687,0-3.06-1.373-3.06-3.06
+                v-50.57c0-1.687,1.373-3.06,3.06-3.06h194.805v28.558c0,10.686,8.693,19.378,19.378,19.378h36.717
+                c10.686,0,19.378-8.693,19.378-19.378v-28.558h194.805c1.687,0,3.06,1.373,3.06,3.06V248.944z"
+                ></path>
+                <path
+                  d="M110.151,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                c5.633,0,10.199-4.567,10.199-10.199V306.486C120.351,300.854,115.784,296.287,110.151,296.287z"
+                ></path>
+                <path
+                  d="M168.491,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                s10.199-4.567,10.199-10.199V306.486C178.69,300.854,174.124,296.287,168.491,296.287z"
+                ></path>
+                <path
+                  d="M226.83,296.287c-5.633,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                c5.633,0,10.199-4.567,10.199-10.199V306.486C237.029,300.854,232.463,296.287,226.83,296.287z"
+                ></path>
+                <path
+                  d="M285.17,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                c5.632,0,10.199-4.567,10.199-10.199V306.486C295.369,300.854,290.802,296.287,285.17,296.287z"
+                ></path>
+                <path
+                  d="M343.509,296.287c-5.632,0-10.199,4.567-10.199,10.199v142.789c0,5.632,4.566,10.199,10.199,10.199
+                c5.632,0,10.199-4.567,10.199-10.199V306.486C353.708,300.854,349.141,296.287,343.509,296.287z"
+                ></path>
+                <path
+                  d="M401.849,296.287c-5.632,0-10.199,4.567-10.199,10.199v8.164c0,5.632,4.567,10.199,10.199,10.199
+                c5.632,0,10.199-4.567,10.199-10.199v-8.164C412.048,300.854,407.481,296.287,401.849,296.287z"
+                ></path>
+                <path
+                  d="M401.849,343.204c-5.632,0-10.199,4.567-10.199,10.199v95.871c0,5.632,4.567,10.199,10.199,10.199
+                c5.632,0,10.199-4.567,10.199-10.199v-95.871C412.048,347.771,407.481,343.204,401.849,343.204z"
+                ></path>
+              </svg>
+            </span>
+            <span> $ 0.00 {{ "usd" | uppercase }} </span>
+          </button>
+        </div>
+        <div></div>
+      </div>
+    </div>
   </div>
 
   <!-- bottom-nav -->
   <div class="bottom-nav">
-    <div class="container"></div>
+    <div class="container bottom-nav-child"></div>
   </div>
 </div>
