--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -38,7 +38,10 @@ $table-bg-color: #fbae01;
 $table-text-color: #6a4a02;
 $table-sm-color: #fe7b03;
 $color-black: #000000;
-$color-smooth-black: #333333;
+
+// my addition:---
+$color-smooth-black: #e4e4e4;
+$color-red-crimson: #fc404a;
 
 // FONT SIZE
 $font-title-size: 24px;
