--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="nav-main">
   <!-- top nav -->
   <div class="top-nav">
-    <div class="container top-nav-child">
+    <div class="custom-container top-nav-child">
       <div class="top-left">
         <p>Get 30% Off On Selected Items</p>
       </div>
@@ -50,7 +50,7 @@
   </div>
   <!-- middle nav -->
   <div class="middle-nav">
-    <div class="container middle-nav-child">
+    <div class="custom-container middle-nav-child">
       <!-- logo -->
       <div class="mid-logo">
         <img
@@ -146,8 +146,9 @@
                 c5.632,0,10.199-4.567,10.199-10.199v-95.871C412.048,347.771,407.481,343.204,401.849,343.204z"
                 ></path>
               </svg>
+              <sup>3</sup>
             </span>
-            <span> $ 0.00 {{ "usd" | uppercase }} </span>
+            <span> $0.00 {{ "usd" | uppercase }} </span>
           </button>
         </div>
         <div></div>
@@ -157,6 +158,101 @@
 
   <!-- bottom-nav -->
   <div class="bottom-nav">
-    <div class="container bottom-nav-child"></div>
+    <div class="custom-container bottom-nav-child">
+      <div class="nav-items">
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "Home" | uppercase }}</a>
+          </p>
+        </div>
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "Special" | uppercase }}</a>
+          </p>
+        </div>
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "New Products" | uppercase }}</a>
+          </p>
+        </div>
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "Blog" | uppercase }}</a>
+          </p>
+        </div>
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "Contact" | uppercase }}</a>
+          </p>
+        </div>
+        <div class="nav-item">
+          <p>
+            <a href="#">{{ "Policy" | uppercase }}</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="special">
+        <button type="button">
+          <span>
+            <svg
+              viewBox="0 0 504.124 504.124"
+              id="hcall"
+              width="30px"
+              height="30px"
+            >
+              <path
+                style="fill: #db5449"
+                d="M15.754,133.909l236.308,118.154L488.37,133.909v252.062L252.062,504.123L15.754,385.969V133.909z"
+              ></path>
+              <path
+                style="fill: #c54b42"
+                d="M15.754,157.538v73.649l235.52,115.397l237.095-115.791v-73.255L252.062,273.33L15.754,157.538z"
+              ></path>
+              <path
+                style="fill: #d05045"
+                d="M252.062,504.123V252.063L31.508,141.786H15.754v244.185L252.062,504.123z"
+              ></path>
+              <path
+                style="fill: #bb483e"
+                d="M15.754,157.538v73.649l235.52,115.397l0.788-0.394v-73.255v0.394L15.754,157.538z"
+              ></path>
+              <path
+                style="fill: #eb6258"
+                d="M0,125.638L252.062,0.001l252.062,125.637v16.542L252.062,267.815L0,142.573V125.638z"
+              ></path>
+              <path
+                style="fill: #efefef"
+                d="M396.603,39.779c-8.271-14.966-25.994-24.025-46.868-24.025c-47.655,0-81.132,44.505-97.674,72.862
+          c-16.542-28.357-50.412-72.468-97.674-72.468c-30.326,0-51.988,18.511-51.988,43.717c0,44.898,49.231,74.043,148.086,74.043
+          s151.237-37.415,151.237-73.649C401.723,53.17,400.148,46.081,396.603,39.779z M164.628,88.223
+          c-11.028-7.483-14.966-15.754-14.966-21.268c0-6.695,6.302-11.815,15.36-11.815c21.268,0,38.203,27.963,47.655,47.262
+          C187.865,100.432,173.292,93.736,164.628,88.223z M339.495,88.223c-8.665,5.514-23.237,12.209-48.049,14.178
+          c9.058-19.298,25.994-47.262,47.655-47.262c9.058,0,15.36,5.12,15.36,11.815C354.462,72.469,350.523,80.739,339.495,88.223z"
+              ></path>
+              <path
+                style="fill: #e2574c"
+                d="M0,126.032l252.062,123.274l252.062-123.274v81.526l-252.85,123.274L0,207.558V126.032z"
+              ></path>
+              <path
+                style="fill: #efefef"
+                d="M346.585,213.859v-9.058l-94.523-51.2l-94.523,51.2v9.058L94.524,186.29v-12.603l154.387-81.526
+          l3.151,1.575l3.151-1.575L409.6,173.293v12.603L346.585,213.859z"
+              ></path>
+              <path
+                style="fill: #dcdcdc"
+                d="M346.585,204.801v251.668l63.015-31.508V173.293L346.585,204.801z"
+              ></path>
+              <path
+                style="fill: #d1d1d1"
+                d="M94.523,425.354l63.015,31.508V205.195l-63.015-31.902C94.523,173.292,94.523,425.354,94.523,425.354
+          z"
+              ></path>
+            </svg>
+          </span>
+          <span>Special Gift</span>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
