--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -1,5 +1,6 @@
 @import "./variable.scss";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0px;
   margin: 0px;
@@ -27,6 +28,7 @@ a {
   display: block;
   color: $color-black;
   text-decoration: none;
+  cursor: pointer;
 }
 
 a:hover {
@@ -34,12 +36,16 @@ a:hover {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 img {
   display: block;
   width: 100%;
 }
 
-.container {
+.custom-container {
   display: block;
   max-width: $theme-container-width;
   width: 100%;
@@ -48,27 +54,12 @@ img {
 }
 
 @media (max-width: 900px) {
-  /* 
-  .container {
-    width: 97%;
-  }
-  */
-  .container {
-    width: 100%;
+  .custom-container {
+    width: 100% !important;
     padding: 0px 15px;
     box-sizing: border-box;
   }
 }
-
-/* 
-@media (max-width: 700px) {
-  .container {
-    width: 100%;
-    padding: 0px 15px;
-    box-sizing: border-box;
-  }
-} 
-*/
 
 .clearfix::after {
   content: "";
@@ -85,5 +76,4 @@ h6,
 p {
   margin: 0px;
 }
-
 /**** default code  ****/
