--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,11 +30,22 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  position: relative;
+}
+
+.account {
+  position: relative;
 }
 
 .account-dropdown a {
   display: flex;
   align-items: center;
+  transition: 400ms;
+  position: relative;
+}
+
+.account-dropdown a:hover {
+  color: $color-red-crimson;
 }
 
 .account-dropdown p,
@@ -57,6 +68,52 @@
   margin-left: 6px;
   font-size: 12px;
   padding-top: 3px;
+}
+
+.account-dropdown-menu {
+  margin-top: 5px;
+  padding: 5px 0px;
+  border: 1px solid $color-smooth-black;
+  border-radius: 5px;
+  position: absolute;
+  top: 22px;
+  right: 0px;
+  background-color: #fff;
+  z-index: 1111;
+
+  width: 160px;
+}
+
+.account-dropdown-menu ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.account-dropdown-menu ul li a {
+  padding: 5px 15px;
+  font-size: 14px;
+  font-weight: 400;
+  color: $color-black;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  transition: 300ms;
+}
+
+.account-dropdown-menu ul li a:hover {
+  color: $color-red-crimson;
+}
+
+.account-dropdown-menu ul li a span:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 6px;
+}
+
+.account-dropdown-menu ul li a span:first-child i {
+  font-size: 12px;
 }
 
 .country-select {
@@ -136,7 +193,7 @@
 }
 
 .middle-nav-child .mid-search {
-  flex: 0.5;
+  flex: 0.65;
 }
 
 .mid-search form {
