--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -10,7 +10,7 @@
 body {
   display: block;
   width: 100%;
-  height: auto;
+  min-height: 100vh;
   box-sizing: border-box;
   font-family: $font-en-primary-3;
   font-style: normal;
@@ -22,6 +22,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   scroll-behavior: smooth;
+  background-color: red;
 }
 
 a {
