--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -380,6 +380,10 @@
   color: $color-red-crimson;
 }
 
+.bottom-nav-child .nav-item p a.active {
+  color: $color-red-crimson;
+}
+
 .special button {
   border: 0px;
   outline: 0px;
