--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -29,19 +29,21 @@ $max-tablet-width: 899px;
 // COLOR
 $searchBorderColor: #dedede;
 $searchInputBg: #f8f8f8;
-$color-light-gray: #e1e1e1;
 $color-primary: #ef3688;
-$color-primary-2: #2d2d2d;
 $color-secondary: #ffd200;
 $icon-default-color: #ffffff;
 $table-bg-color: #fbae01;
 $table-text-color: #6a4a02;
 $table-sm-color: #fe7b03;
-$color-black: #000000;
 
 // my addition:---
+$color-light-gray: #787777;
+$color-light-gray-2: #a1a1a1;
+$color-light-2: #eeee;
+$color-black: #000000;
 $color-smooth-black: #e4e4e4;
 $color-red-crimson: #fc404a;
+$color-crimson-opacity: #fc4049d8;
 
 // FONT SIZE
 $font-title-size: 24px;
