--- a/src/theme/variable.scss
+++ b/src/theme/variable.scss
@@ -39,11 +39,13 @@ $table-sm-color: #fe7b03;
 // my addition:---
 $color-light-gray: #787777;
 $color-light-gray-2: #a1a1a1;
+$color-light-gray-3: #a1a1a14d;
 $color-light-2: #eeee;
 $color-black: #000000;
 $color-smooth-black: #e4e4e4;
 $color-red-crimson: #fc404a;
 $color-crimson-opacity: #fc4049d8;
+$color-crimson-opacity-2: #6f0d1272;
 
 // FONT SIZE
 $font-title-size: 24px;
