add some changes

--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -67,7 +67,7 @@
             <label for="password">Password:</label>
             <input
               id="password"
-              type="email"
+              type="password"
               placeholder="Enter password..."
               formControlName="password"
             />
