show seller data in loal storage.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -230,7 +230,7 @@
                 <a
                   title="seller-data"
                   href=""
-                  [routerLink]="'seller?-' + userName"
+                  routerLink="seller-data"
                   routerLinkActive="active"
                 >
                   {{ "Seller" | uppercase }}
@@ -292,7 +292,7 @@
           </div>
           <div class="nav-item">
             <p>
-              <a href="" routerLink="/error" routerLinkActive="">
+              <a href="" routerLink="/gfhjhgjghj" routerLinkActive="">
                 {{ "Contact" | uppercase }}
               </a>
             </p>
